--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "recompose": "^0.30.0",
     "redux": "^4.0.1"
   },
   "scripts": {
