--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "2.1.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
-    "redux-router": "^2.1.2"
+    "redux-router": "^2.1.2",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
