try adding gallery detail

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-router": "^2.1.2",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
