--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-swipeable-views": "^0.13.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-router": "^2.1.2",
