--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@material-ui/icons": "^3.0.1",
     "@material-ui/lab": "^3.0.0-alpha.26",
     "connected-react-router": "^6.0.0",
+    "filepond": "^3.7.2",
     "history": "^4.7.2",
     "react": "^16.6.3",
     "react-amap": "^1.2.7",
     "react-dom": "^16.6.3",
+    "react-filepond": "^5.0.0",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
